--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,5 @@
 ---
-title: Projects
+title: Product
 layout: default
 ---
 
@@ -27,7 +27,7 @@ layout: default
 							<img src="images/work-zenoh.png">
 							<ul>
 								<li>
-									Zenoh has been designed to address the needs of those applications that need to deal with data in movement, data at rest and computation in a scalable, efficient and location transparent data manner.
+									DORA has been designed to address the needs of those applications that need to deal with data in movement, data at rest and computation in a scalable, efficient and location transparent data manner.
 								</li>
 								<li class="skill">
 									<span><b>JS</b></span>
@@ -39,7 +39,7 @@ layout: default
 					</li>
 					<li>
 						<div class="cbp_tmlabel">
-							<h2 id="boxoffice">Zenoh-flow</h2>
+							<h2 id="boxoffice">DORA-flow</h2>
 							<time>2015.09</time>
 							<img src="images/work-zenoh-flow.png">
 							<ul>
